Switching over to debug versions of the scripts

--- a/app.html
+++ b/app.html
@@ -6,8 +6,15 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>GLBRC_Test</title>
-    <script src="http://extjs.cachefly.net/ext-4.1.1-gpl/ext-all.js"></script>
-    <link rel="stylesheet" href="http://extjs.cachefly.net/ext-4.1.1-gpl/resources/css/ext-all.css">
+    <script src="http://extjs.cachefly.net/ext-4.1.1-gpl/ext-all-debug.js"></script>
+    <link rel="stylesheet" href="http://extjs.cachefly.net/ext-4.1.1-gpl/resources/css/ext-all-debug.css">
+<style type="text/css">
+.x-accordion-hd .x-panel-header-text {
+  color: #022048;
+  font-weight: bold;
+  font-size: 12px;
+}
+</style>
     <script type="text/javascript" src="app.js?_dc=1354642241337"></script>
 </head>
 <body></body>
