--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
   font-size: 12px;
 }
 
+.x-panel-header-text-default {
+  color: #022048;
+  font-weight: bold;
+  font-size: 12px;
+}
+.my-header .x-accordion-hd {
+  background-image: none;
+  background: #95b0db !important;
+  color: #ffffff;
+}
+
 .olControlPanPanel div {
     background-image: url('app/images/pan-panel.png');
     height: 18px;
