--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>GLBRC_Test</title>
+    <title>GLBRC DSS v0.01</title>
     <script src="http://extjs.cachefly.net/ext-4.1.1-gpl/ext-all-debug.js"></script>
     <link rel="stylesheet" href="http://extjs.cachefly.net/ext-4.1.1-gpl/resources/css/ext-all-debug.css">
     <script src="http://openlayers.org/api/2.12-rc3/OpenLayers.js"></script>
