--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>GLBRC_Test</title>
-    <script src="http://extjs.cachefly.net/ext-4.1.1-gpl/ext-all-debug.js"></script>
-    <link rel="stylesheet" href="http://extjs.cachefly.net/ext-4.1.1-gpl/resources/css/ext-all-debug.css">
+    <title>GLBRC DSS v0.01</title>
+    <script src="http://extjs.cachefly.net/ext-4.1.1-gpl/ext-all.js"></script>
+    <link rel="stylesheet" href="http://extjs.cachefly.net/ext-4.1.1-gpl/resources/css/ext-all.css">
     <script src="http://openlayers.org/api/2.12-rc3/OpenLayers.js"></script>
     <script src="http://svn.osgeo.org/metacrs/proj4js/trunk/lib/proj4js-compressed.js"></script>
     <script type="text/javascript">OpenLayers.ImgPath = "./app/images/";</script>
-    <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
     <script type="text/javascript">
     	Proj4js.defs["EPSG:3174"] = "+proj=aea +lat_1=42.122774 +lat_2=49.01518 +lat_0=45.568977 +lon_0=-84.455955 +x_0=1000000 +y_0=1000000 +ellps=GRS80 +datum=NAD83 +units=m +no_defs";
     </script>
@@ -17,12 +16,16 @@
 <style type="text/css">
 .x-accordion-hd .x-panel-header-text {
   color: #022048;
+  text-shadow: 0px -1px 1px #ffffff;
+  filter: dropshadow(color=#ffffff, offx=0, offy=-1);
   font-weight: bold;
   font-size: 12px;
 }
 
 .x-panel-header-text-default {
   color: #022048;
+  text-shadow: 0px -1px 1px #ffffff;
+  filter: dropshadow(color=#ffffff, offx=0, offy=-1);
   font-weight: bold;
   font-size: 12px;
 }
